<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Cosmic hunter 3D</string>
    <string name="default_vibration" translatable="false">on</string>
    <string name="default_music" translatable="false">on</string>
    <string name="default_sound" translatable="false">on</string>
    <string name="min_particles" translatable="false">100</string>
    <string name="max_particles" translatable="false">700</string>

    <string name="start_time" translatable="false">10:00</string>
    <string name="start_hints" translatable="false">h:0/50</string>

    <!-- about game -->
    <string name="music_link" translatable="false">https://www.purple-planet.com</string>
    <string name="sound_link" translatable="false">https://www.opengameart.org</string>
    <string name="textures_link" translatable="false">https://www.aduvan.ru</string>
    <string name="pictures_link" translatable="false">https://www.goodfon.ru</string>
    <string name="blender_link" translatable="false">https://www.blender.org</string>

    <string name="start_game">Start game</string>
    <string name="select_level">Select level</string>
    <string name="settings_button">Settings</string>
    <string name="about_game_button">About game</string>
    <string name="exit">exit</string>


    <string name="settings_vibration_label">Vibration</string>
    <string name="settings_sound_label">Sound</string>
    <string name="settings_music_label">Music</string>
    <string name="settings_on">on</string>
    <string name="settings_off">off</string>
    <string name="particles_level">Particles level</string>
    <string name="fog_label">Atmosphere</string>
    <string name="back">back</string>

    <string name="level">Level</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="level_passed">Level passed</string>
    <string name="level_not_passed">Level not passed</string>

    <string name="pause">PAUSE</string>
    <string name="dialog_text">Return to main menu?</string>
    <string name="back_to_menu">Menu</string>
    <string name="cancel">Cancel</string>

    <!-- about game -->
    <string name="music_text">Music</string>
    <string name="sound_text">Sound</string>
    <string name="textures_text">Textures</string>
    <string name="pictures_text">Pictures</string>
    <string name="blender_text">Modeling</string>

    <string name="load_game_text">Load game</string>

    <string name="opengl_not_support">OpenGL is not supported</string>
</resources>
