...
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:includeFontPadding="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_close_snackbar"
        android:layout_width="45dp"
...
